nohup.out
Can't exec "/usr/bin/python": No such file or directory at
	/usr/share/perl/5.30/IPC/Open3.pm line 281 (#1)
    (W exec) A system(), exec(), or piped open call could not execute the
    named program for the indicated reason.  Typical reasons include: the
    permissions were wrong on the file, the file wasn't found in
    $ENV{PATH}, the executable in question was compiled for another
    architecture, or the #! line in a script points to an interpreter that
    can't be run for similar reasons.  (Or maybe your system doesn't support
    #! at all.)
    
Uncaught exception from user code:
	open2: exec of /usr/bin/python failed: No such file or directory at /home/lwd/code/TopoScope.code/asrank.pl line 838.
	IPC::Open3::_open3("open2", GLOB(0x55df19ef1da0), GLOB(0x55df19ef1d88), ">&STDERR", "/usr/bin/python") called at /usr/share/perl/5.30/IPC/Open2.pm line 117
	IPC::Open2::open2(GLOB(0x55df19ef1d88), GLOB(0x55df19ef1da0), "/usr/bin/python") called at /home/lwd/code/TopoScope.code/asrank.pl line 838
	main::python_clique(6939, 174, 3356, 3549, 39533, 24482, 35280, 7018, ...) called at /home/lwd/code/TopoScope.code/asrank.pl line 906
	main::infer_clique(10) called at /home/lwd/code/TopoScope.code/asrank.pl line 1013
[mkfile]make file /home/lwd/RIB.test/path.test/pc20201201.v4.u.path.tmp
python3: can't open file 'toposcope.py': [Errno 2] No such file or directory
[mkfile]make file /home/lwd/RIB.test/path.test/pc20201201.v6.u.path.tmp
[mkfile]make file /home/lwd/RIB.test/path.test/pc20201215.v4.u.path.tmp
[mkfile]make file /home/lwd/RIB.test/path.test/pc20201208.v6.u.path.tmp
[mkfile]make file /home/lwd/RIB.test/path.test/pc20201222.v6.u.path.tmp
[mkfile]make file /home/lwd/RIB.test/path.test/pc20201222.v4.u.path.tmp
[mkfile]make file /home/lwd/RIB.test/path.test/pc20201215.v6.u.path.tmp
[mkfile]make file /home/lwd/RIB.test/path.test/pc20201208.v4.u.path.tmp
[mkfile]make file /home/lwd/RIB.test/path.test/pc20201201.v4.u.path.tmp
[mkfile]make file /home/lwd/RIB.test/path.test/pc20201201.v6.u.path.tmp
[mkfile]make file /home/lwd/RIB.test/path.test/pc20201215.v4.u.path.tmp
[mkfile]make file /home/lwd/RIB.test/path.test/pc20201208.v6.u.path.tmp
[mkfile]make file /home/lwd/RIB.test/path.test/pc20201222.v6.u.path.tmp
[mkfile]make file /home/lwd/RIB.test/path.test/pc20201222.v4.u.path.tmp
[mkfile]file exists. removing /home/lwd/RIB.test/path.test/pc20201222.v4.u.path.tmp
[mkfile]make file /home/lwd/RIB.test/path.test/pc20201215.v6.u.path.tmp
[mkfile]make file /home/lwd/RIB.test/path.test/pc20201208.v4.u.path.tmp
start
ready:/home/lwd/Result/auxiliary/irr.txt
ready:/home/lwd/Result/auxiliary/pc20201201.v4.arout
ready:/home/lwd/RIB.test/path.test
ready:/home/lwd/AT/TopoScope/asrank_irr.pl
ready:/home/lwd/Result/auxiliary
ready:/home/lwd/Result/TS_working
ready:/home/lwd/Result/AP_working
date:20201201
Traceback (most recent call last):
  File "run.py", line 626, in <module>
    struc.read_irr(irr_file)
  File "run.py", line 314, in read_irr
    if tmp[2] == '1':
IndexError: list index out of range
start
ready:/home/lwd/Result/auxiliary/irr.txt
ready:/home/lwd/Result/auxiliary/pc20201201.v4.arout
ready:/home/lwd/RIB.test/path.test
ready:/home/lwd/RIB.test/path.test/pc20201201.v4.u.path.clean
ready:/home/lwd/AT/TopoScope/asrank_irr.pl
ready:/home/lwd/Result/auxiliary
ready:/home/lwd/Result/TS_working
ready:/home/lwd/Result/AP_working
date:20201201
139159
5141
956
799
142092
5141
930
825
142257
5141
930
825
142281
5141
930
825
142282
5141
930
825
conflict: 24
saving
ready:/home/lwd/Result/auxiliary/irr.txt
ready:/home/lwd/Result/auxiliary/pc20201208.v4.arout
ready:/home/lwd/RIB.test/path.test
ready:/home/lwd/RIB.test/path.test/pc20201208.v4.u.path.clean
ready:/home/lwd/AT/TopoScope/asrank_irr.pl
ready:/home/lwd/Result/auxiliary
ready:/home/lwd/Result/TS_working
ready:/home/lwd/Result/AP_working
date:20201208
144611
6139
1030
927
147354
6139
1009
948
147595
6139
1009
948
147607
6139
1009
948
147607
6139
1009
948
conflict: 22
saving
ready:/home/lwd/Result/auxiliary/irr.txt
ready:/home/lwd/Result/auxiliary/pc20201215.v4.arout
ready:/home/lwd/RIB.test/path.test
ready:/home/lwd/RIB.test/path.test/pc20201215.v4.u.path.clean
ready:/home/lwd/AT/TopoScope/asrank_irr.pl
ready:/home/lwd/Result/auxiliary
ready:/home/lwd/Result/TS_working
ready:/home/lwd/Result/AP_working
date:20201215
139978
5361
1052
887
142487
5361
1031
908
142635
5361
1031
908
142636
5361
1031
908
142636
5361
1031
908
conflict: 26
saving
ready:/home/lwd/Result/auxiliary/irr.txt
ready:/home/lwd/Result/auxiliary/pc20201222.v4.arout
ready:/home/lwd/RIB.test/path.test
ready:/home/lwd/RIB.test/path.test/pc20201222.v4.u.path.clean
ready:/home/lwd/AT/TopoScope/asrank_irr.pl
ready:/home/lwd/Result/auxiliary
ready:/home/lwd/Result/TS_working
ready:/home/lwd/Result/AP_working
date:20201222
142301
5557
888
799
144617
5557
874
813
144822
5557
874
813
144858
5557
874
813
144858
5557
874
813
conflict: 24
saving
ready:/home/lwd/Result/auxiliary/relationship_communities.txt
ready:/home/lwd/Result/auxiliary/20201001.as-org2info.txt
ready:/home/lwd/RIB.test/path
ready:/home/lwd/RIB.test/validation
Succesfully get routeserver list!
Community relationships Extraction: Succesfully get ASN to organization mapping relationships!
Begin construct/home/lwd/RIB.test/path directory's validation data!
/home/lwd/RIB.test/path directory's rib files have been succesfully extracted!
start
ready:/home/lwd/Result/auxiliary/irr.txt
ready:/home/lwd/Result/auxiliary/pc20201208.v4.arout
ready:/home/lwd/RIB.test/path.test
ready:/home/lwd/RIB.test/path.test/pc20201208.v4.u.path.clean
ready:/home/lwd/AT/TopoScope/asrank_irr.pl
ready:/home/lwd/Result/auxiliary
ready:/home/lwd/Result/TS_working
ready:/home/lwd/Result/AP_working
date:20201208
Traceback (most recent call last):
  File "run.py", line 694, in <module>
    struc.apollo(path_file,ap_file,wp_file) # AP simple infer
  File "run.py", line 302, in apollo
    self.process_line_AP(ASes) # Apollo
  File "run.py", line 194, in process_line_AP
    if(ASes[i],ASes[i+1]) in self.irr_c2p:
KeyboardInterrupt
start
ready:/home/lwd/Result/auxiliary/irr.txt
ready:/home/lwd/Result/auxiliary/pc20201208.v4.arout
ready:/home/lwd/RIB.test/path.test
ready:/home/lwd/RIB.test/path.test/pc20201208.v4.u.path.clean
ready:/home/lwd/AT/TopoScope/asrank_irr.pl
ready:/home/lwd/Result/auxiliary
ready:/home/lwd/Result/TS_working
ready:/home/lwd/Result/AP_working
date:20201208
144611
6139
1030
927
147354
6139
1009
948
147595
6139
1009
948
147607
6139
1009
948
147607
6139
1009
948
conflict: 22
saving
working on /home/lwd/Result/AP_working/rel_20201208.st1
Traceback (most recent call last):
  File "run.py", line 611, in <module>
    Struc.AP_to_read(read,write)
  File "run.py", line 589, in AP_to_read
    res = eval(f.read())
  File "<string>", line 0
    
    ^
SyntaxError: unexpected EOF while parsing
start
ready:/home/lwd/Result/auxiliary/irr.txt
ready:/home/lwd/Result/auxiliary/pc20201208.v4.arout
ready:/home/lwd/RIB.test/path.test
ready:/home/lwd/RIB.test/path.test/pc20201208.v4.u.path.clean
ready:/home/lwd/AT/TopoScope/asrank_irr.pl
ready:/home/lwd/Result/auxiliary
ready:/home/lwd/Result/TS_working
ready:/home/lwd/Result/AP_working
date:20201208
144611
6139
1030
927
147354
6139
1009
948
147595
6139
1009
948
147607
6139
1009
948
147607
6139
1009
948
conflict: 22
saving
/home/lwd/Result/AP_working/rel_20201208.st1
/home/lwd/Result/AP_working/rel_20201208.apr
working on /home/lwd/Result/AP_working/rel_20201208.st1
/home/lwd/Result/AP_working/rel_20201215.st1
/home/lwd/Result/AP_working/rel_20201215.apr
working on /home/lwd/Result/AP_working/rel_20201215.st1
/home/lwd/Result/AP_working/rel_20201201.st1
/home/lwd/Result/AP_working/rel_20201201.apr
working on /home/lwd/Result/AP_working/rel_20201201.st1
/home/lwd/Result/AP_working/rel_20201222.st1
/home/lwd/Result/AP_working/rel_20201222.apr
working on /home/lwd/Result/AP_working/rel_20201222.st1
